--- a/style.css
+++ b/style.css
@@ -273,8 +273,8 @@ p {
   position: fixed;
   top: 20px;
   right: 20px;
-  background-color: #f9f3f0;
-  border: 2px solid #d89a9a;
+  background-color: #f5deb3;
+  border: 2px solid #8b4513;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -288,7 +288,7 @@ p {
 }
 
 .dark-mode-toggle:hover {
-  background-color: #d89a9a;
+  background-color: #40E0D0;
   transform: scale(1.1);
 }
 
