--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ p {
 }
 
 .interactive-button {
-  background-color: #93E9BE;
+  background-color: #368DC5;
   border: 2px solid #8b4513;
   border-radius: 50%; /* Makes it circular */
   padding: 20px;
@@ -273,7 +273,7 @@ p {
   position: fixed;
   top: 20px;
   right: 20px;
-  background-color: #93E9BE;
+  background-color: #368DC5;
   border: 2px solid #8b4513;
   border-radius: 50%;
   width: 50px;
